vendor/fixed-macro/tests/compile-fail/extra-tokens.rs
fn main() {
    fixed_macro::fixed!(1.23: I4F4 foo);
}
